# projectdavid

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  README.md  SECURITY.md  __init__.py  _version.py  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  lint.yml  pin-sha.yml  publish-testpypi.yml  publish.yml  tag.yml  test.yml  test_tag_release.yml
docs/: STREAM_CONTRACT.md  UPDATE-V133.23.md  consumer_tool_call_flow.md  function_calling.md  handling_function_calls.md  tools.md  users.md
scripts/: fix_mypy_optionals.py  pin_entities_common.py  update_pyproject_version.py  update_version.py
src/entities/: __init__.py  entities.py  events.py
src/entities/clients/: actions.py  assistants.py  base_vector_store.py  file_processor.py  files.py  inference.py  messages.py  runs.py  synchronous_inference_stream.py  threads.py  tools.py  users.py  vector_store_manager.py  vectors.py
src/entities/constants/: platform.py
src/entities/utils/: monitor_launcher.py  run_monitor.py
src/entities_sdk/: __init__.py  entities.py  events.py  serializers.py
src/entities_sdk/clients/: actions.py  assistants.py  base_vector_store.py  file_processor.py  inference.py  messages.py  runs.py  tools.py  users.py  vectors.py
src/entities_sdk/services/: logging_service.py
src/entities_sdk/utils/: run_monitor.py
src/projectdavid/: __init__.py  entity.py  events.py
src/projectdavid/clients/: actions_client.py  api_key_client.py  assistants_client.py  base_client.py  batfish_client.py  computer.py  computer_client.py  datasets_client.py  deployments_client.py  engineer.py  events.py  file_processor.py  files_client.py  inference.py  inference_client.py  messages_client.py  models_client.py  registry_client.py  runs.py  synchronous_inference_stream.py  synchronous_inference_wrapper.py  threads_client.py  tools.py  tools_client.py  training_client.py  users_client.py  vector_store_manager.py  vectors.py
src/projectdavid/synthesis/: llm_synthesizer.py  reranker.py  retriever.py
src/projectdavid/utils/: network_device_handler.py  validation.py  vector_search_formatter.py
tests/: test_clients.py
tests/e2e/: test_projectdavid_flow.py
working_scratch/: git-run-sheet.md
