[project]
name = "projectdavid"
version = "1.90.1"
description = "Python SDK for interacting with the Project David Platform Assistant API."
readme = "README.md"
authors = [
    { name = "Francis Neequaye Armah", email = "francis.neequaye@projectdavid.co.uk" }
]
license = { text = "PolyForm Noncommercial License 1.0.0" }
keywords = ["AI", "SDK", "Entities", "LLM", "Assistant"]
requires-python = ">=3.9"

dependencies = [
    "httpx>=0.25.2,<0.29",
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.0.1,<2.0",
    "aiofiles>=23.2.1,<25.0",
    "projectdavid_common==0.61.0",
    "qdrant-client>=1.0.0,<2.0.0",
    "pdfplumber>=0.11.0,<0.12.0",
    "validators>=0.29.0,<0.35.0",
    "nest-asyncio>=1.6.0,<2.0",
    "requests>=2.31.0,<3.0",
    "sseclient-py>=1.7.2,<2.0",
    "python-docx>=1.1.0,<2.0",
    "python-pptx>=1.0.0,<2.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent"
]

[tool.setuptools.package-data]
"projectdavid" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Exclude folders if needed
  \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
